unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/pse__Revenue_Forecast_Setup__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__RevenueForecastSetupHelp</customHelpPage>
    <description>Stores the settings for running a revenue forecast.</description>
    <label>Revenue Forecast Setup</label>
    <nameField>
        <displayFormat>RFS-{0000}</displayFormat>
        <label>Revenue Forecast Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast Setup</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>