unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Custom_Filter_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>pse__Custom_Filter_Field_Set__c</fullName>
    <description>API name of the field set on the Revenue Forecast Version Detail object that contains the project, opportunity, and milestone fields you want to use as custom filters on the Review Forecast Version page.</description>
    <inlineHelpText>API name of the field set on the Revenue Forecast Version Detail object that contains the project, opportunity, and milestone fields you want to use as custom filters on the Review Forecast Version page.</inlineHelpText>
    <label>Custom Filter Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>