unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Exclude_Opportunities_For_Versions__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_Opportunities_For_Versions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, opportunities are excluded from revenue forecast versions.</description>
    <inlineHelpText>If selected, opportunities are excluded from revenue forecast versions.</inlineHelpText>
    <label>Exclude Opportunities for Versions</label>
    <type>Checkbox</type>
</CustomField>