unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Exclude_Opportunity_Probabilities__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_Opportunity_Probabilities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, probabilities are not applied to opportunity revenue forecasts.</description>
    <inlineHelpText>If selected, probabilities are not applied to opportunity revenue forecasts.</inlineHelpText>
    <label>Exclude Probability from Opportunities</label>
    <type>Checkbox</type>
</CustomField>