unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Exclude_Resource_Requests_On_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_Resource_Requests_On_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether revenue relating to held resource requests is excluded from revenue forecasts.</description>
    <inlineHelpText>Select to exclude revenue relating to held resource requests on projects and milestones.</inlineHelpText>
    <label>Exclude Resource Requests on Project</label>
    <type>Checkbox</type>
</CustomField>