unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Exclude_Revenue_Recognition_Actuals__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_Revenue_Recognition_Actuals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, revenue recognition actuals from the integration with Revenue Management are no longer included in revenue forecast calculations.</description>
    <inlineHelpText>If selected, revenue recognition actuals from the integration with Revenue Management are no longer included in revenue forecast calculations.</inlineHelpText>
    <label>Exclude Revenue Recognition Actuals</label>
    <type>Checkbox</type>
</CustomField>