unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Exclude_Unscheduled_Revenue_For_Versions__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_Unscheduled_Revenue_For_Versions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, any unscheduled revenue on projects or milestones is excluded from revenue forecast versions.</description>
    <inlineHelpText>If selected, any unscheduled revenue on projects or milestones is excluded from revenue forecast versions.</inlineHelpText>
    <label>Exclude Unscheduled Revenue for Versions</label>
    <type>Checkbox</type>
</CustomField>