unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Forecast_Factor_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Factor_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Number of records to be processed at the same time, such as timecards and expenses.</description>
    <inlineHelpText>Number of records to be processed at the same time, such as timecards and expenses.</inlineHelpText>
    <label>Forecast Factor Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>