unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Hover_Details_Field_Set_On_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>pse__Hover_Details_Field_Set_On_Opportunity__c</fullName>
    <description>API name of the field set on the Opportunity object that controls the hover details displayed for an opportunity in the Forecast Breakdown grid. If you do not enter a field set, default hover details apply.</description>
    <inlineHelpText>API name of the field set on the Opportunity object that controls the hover details displayed for an opportunity in the Forecast Breakdown grid. If you do not enter a field set, default hover details apply.</inlineHelpText>
    <label>Hover Details Field Set on Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>