unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Include_Worst_Case__c.field-meta.xml
<CustomField>
    <fullName>pse__Include_Worst_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the worst case threshold is applied to opportunity revenue forecasts.</description>
    <inlineHelpText>If selected, the worst case threshold is applied to opportunity revenue forecasts.</inlineHelpText>
    <label>Include Worst Case</label>
    <type>Checkbox</type>
</CustomField>