unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Opportunity_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Number of opportunities and opportunity line items to be processed at the same time.</description>
    <inlineHelpText>Number of opportunities and opportunity line items to be processed at the same time.</inlineHelpText>
    <label>Opportunity Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>