unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Opportunity_Worst_Case_Threshold__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity_Worst_Case_Threshold__c</fullName>
    <description>The minimum percentage probability for an opportunity to be included in the worst case scenario.</description>
    <inlineHelpText>The minimum percentage probability for an opportunity to be included in the worst case scenario.</inlineHelpText>
    <label>Opportunity Worst Case Threshold (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>