unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Project_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Batch_Size__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Number of projects to be processed at the same time.</description>
    <inlineHelpText>Number of projects to be processed at the same time.</inlineHelpText>
    <label>Project Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>