unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Project_Start_Date_on_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Start_Date_on_Opportunity__c</fullName>
    <description>The API name of the field on the Opportunity object you want to use as the expected project start date.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the API name of the field on the Opportunity object you want to use as the expected project start date.</inlineHelpText>
    <label>Expected Project Start Date Field on Opp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>