unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Respect_Permission_Controls__c.field-meta.xml
<CustomField>
    <fullName>pse__Respect_Permission_Controls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, permission controls are respected when viewing or adjusting revenue forecast versions on the Review Forecast Version page.</description>
    <inlineHelpText>If selected, permission controls are respected when viewing or adjusting revenue forecast versions on the Review Forecast Version page.</inlineHelpText>
    <label>Respect Permission Controls</label>
    <type>Checkbox</type>
</CustomField>