unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Retain_Pending_Revenue_In_Closed_Periods__c.field-meta.xml
<CustomField>
    <fullName>pse__Retain_Pending_Revenue_In_Closed_Periods__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected when you are not using the integration between PSA and Revenue Management, Revenue Forecasting retains actuals from the previous forecast run for any closed time period. Any remaining pending revenue is moved to the next open time period.</description>
    <inlineHelpText>If selected when you are not using the integration between PSA and Revenue Management, Revenue Forecasting retains actuals from the previous forecast run for any closed time period. Any remaining pending revenue is moved to the next open time period.</inlineHelpText>
    <label>Retain Pending Revenue in Closed Periods</label>
    <type>Checkbox</type>
</CustomField>