unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Total_Hours_Field_on_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Hours_Field_on_Project__c</fullName>
    <description>The API name of the field on the Project object you want to use to calculate the value in the % Hours Completed For Recognition field. If required, you can create your own field and add it to the picklist.</description>
    <inlineHelpText>Select the API name of the field on the Project object you want to use to calculate the value in the % Hours Completed For Recognition field. If required, you can create your own field and add it to the picklist.</inlineHelpText>
    <label>Total Hours Field on Project</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pse__Estimated_Hours_at_Completion__c</fullName>
                <default>true</default>
                <label>pse__Estimated_Hours_at_Completion__c</label>
            </value>
            <value>
                <fullName>pse__Planned_Hours__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>