unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Version_Detail_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Version_Detail_Batch_Size__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>Number of version detail records to be processed at the same time.</description>
    <inlineHelpText>Number of version detail records to be processed at the same time.</inlineHelpText>
    <label>Version Detail Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>