unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/fields/pse__Version_Forecast_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Version_Forecast_Period__c</fullName>
    <description>The forecast period covered by the revenue forecast version.</description>
    <inlineHelpText>The forecast period covered by the revenue forecast version.</inlineHelpText>
    <label>Version Forecast Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rolling 3 Months</fullName>
                <default>true</default>
                <label>Rolling 3 Months</label>
            </value>
            <value>
                <fullName>Rolling 6 Months</fullName>
            </value>
            <value>
                <fullName>Rolling 12 Months</fullName>
            </value>
            <value>
                <fullName>Current Quarter</fullName>
            </value>
            <value>
                <fullName>Current and Next Quarter</fullName>
            </value>
            <value>
                <fullName>Current Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>