unpackaged/main/default/objects/pse__Revenue_Forecast_Setup__c/listViews/psaws__Active_Revenue_Forecast_Setup.listView-meta.xml
<ListView>
    <fullName>psaws__Active_Revenue_Forecast_Setup</fullName>
    <columns>NAME</columns>
    <columns>pse__Active__c</columns>
    <columns>pse__Version_Forecast_Period__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Revenue Forecast Setup</label>
</ListView>